# embedded-learning

./: workspace.code-workspace
c/: convolution
c/convolution/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  convolution  convolution.c
c/digital_filter/: CMakeLists.txt
c/digital_filter/include/: filter.h
c/digital_filter/src/: filter.c  main.c
c/realtime_fir/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  realtime_fir  realtime_fir.c
c/realtime_iir/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  realtime_iir.c
esp-platformio/nodemcu-arduino-blink/src/: main.cpp
esp-platformio/nodemcu-rtos-blink/src/: main.c
nodemcu-platformio/nodemcu-arduino-blink/src/: main.cpp
stm32-platformio/bluepill-arduino-blink/: platformio.ini
stm32-platformio/bluepill-arduino-blink/src/: main.cpp
